--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,5 @@ deploy: // You can name your task however you like
         - master
         deploy:
   script:
-    - apt-get update -qq && apt-get install -y -qq lftp
-    - lftp -c "set ftp:ssl-allow no; open -u $USERNAME,$PASSWORD $HOST; mirror -Rev dist/ ./public_html  --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
+    apt-get update -qq && apt-get install -y -qq lftp
+    lftp -c "set ftp:ssl-allow no; open -u $USERNAME,$PASSWORD $HOST; mirror -Rev dist/ ./public_html  --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
