--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 deploy:
   script:
+    - chmod +r *
     - apt-get update -qq && apt-get install -y -qq lftp
     - lftp -c "set ftp:ssl-allow no; open -u $USERNAME,$PASSWORD $HOST; mirror -Rnev ./ ./slondr.co.nf --ignore-time --parallel=10 --exclude-glob .git* --exclude .git/"
   only:
