--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: SITTV Campus Television
-email: sittvstevens@gmail.com
+title: Eric S. Londres
+email: elondres@stevens.edu
 description: >
-  SITTV Campus Television
+  Eric S. Londres
 baseurl: "/public"
 url: "/public"
 
