fixed syntax error

--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,4 +1,4 @@
-- title: Fallout: New Vegas
+- title: "Fallout: New Vegas"
   dev: Obsidian Entertainment
 - title: Victoria II
   dev: Paradox Development Studio
