fixed config syntax error

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 include:
   - .well-known
-  - *.md
+  - favorites.md
 
 gitlab:
   repository_url: https://gitlab.com/slondr/slondr.gitlab.io
