added titles for videos to yaml file

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,3 +1,54 @@
 - title: Did You Just Assume My Genre?
   role: Co-producer, Actor, writer, assistant videographer
   link: https://www.youtube.com/watch?v=b1QucwbsJCo
+- title: "Paul's Psychedelic Breakfast"
+  role: Producer, editor
+  link: https://www.youtube.com/watch?v=C1Etagzf4k4
+- title: You Purchase Doggo
+  role:
+  link:
+- title: Roving Reporter 2017-09-19
+  role:
+  link:
+- title: Que?
+  role:
+  link:
+- title: Roving Reporter 2017-12-04
+  role:
+  link:
+- title: 1606
+  role:
+  link:
+- title: The Food Critic
+  role:
+  link:
+- title: An Evening of Irish Music
+  role:
+  link:
+- title: SITTV News Episode 0
+  role:
+  link:
+- title: 2018 Stevens SGA Meetings
+  role:
+  link:
+- title: Box
+  role:
+  link:
+- title: SITTV News Season 5
+  role:
+  link:
+- title: Who Am I?
+  role:
+  link:
+- title: I Walk Across Campus
+  role:
+  link:
+- title: Making Stevens Student-Centric
+  role:
+  link:
+- title: The Impeachment Trial of Jon Darlak
+  role:
+  link:
+- title: Hooks & Blow
+  role:
+  link:
