added roles to yaml file

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -5,50 +5,50 @@
   role: Producer, editor
   link: https://www.youtube.com/watch?v=C1Etagzf4k4
 - title: You Purchase Doggo
-  role:
+  role: Director, cinematographer, actor, editor
   link:
 - title: Roving Reporter 2017-09-19
-  role:
+  role: Cinematographer
   link:
 - title: Que?
-  role:
+  role: Editor, videographer
   link:
 - title: Roving Reporter 2017-12-04
-  role:
+  role: Anchor
   link:
 - title: 1606
-  role:
+  role: Executive producer, director, cinematographer, editor
   link:
 - title: The Food Critic
-  role:
+  role: Cinematographer
   link:
 - title: An Evening of Irish Music
-  role:
+  role: Producer, cinematographer
   link:
 - title: SITTV News Episode 0
-  role:
+  role: Editor
   link:
 - title: 2018 Stevens SGA Meetings
-  role:
+  role: Producer, videographer, editor
   link:
 - title: Box
-  role:
+  role: Graphic designer, editor
   link:
 - title: SITTV News Season 5
-  role:
+  role: Actor
   link:
 - title: Who Am I?
-  role:
+  role: Director, cinematographer
   link:
 - title: I Walk Across Campus
-  role:
+  role: Producer, cinematographer, editor
   link:
 - title: Making Stevens Student-Centric
-  role:
+  role: Co-producer, videographer
   link:
 - title: The Impeachment Trial of Jon Darlak
-  role:
+  role: Editor
   link:
 - title: Hooks & Blow
-  role:
+  role: Producer, director, cinematographer, editor
   link:
