populated links for videos and removed old code

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -6,49 +6,49 @@
   link: https://www.youtube.com/watch?v=C1Etagzf4k4
 - title: You Purchase Doggo
   role: Director, cinematographer, actor, editor
-  link:
+  link: https://www.youtube.com/watch?v=WoF7V-8UiwU
 - title: Roving Reporter 2017-09-19
   role: Cinematographer
-  link:
+  link: https://www.youtube.com/watch?v=tmQjn3h8ICc
 - title: Que?
   role: Editor, videographer
-  link:
+  link: https://www.youtube.com/watch?v=PdkuGvrBCsw
 - title: Roving Reporter 2017-12-04
   role: Anchor
-  link:
+  link: https://www.youtube.com/watch?v=fwuB_DvT3GI
 - title: 1606
   role: Executive producer, director, cinematographer, editor
-  link:
+  link: https://www.youtube.com/watch?v=e-bn0Jcf_9k
 - title: The Food Critic
   role: Cinematographer
-  link:
+  link: https://www.youtube.com/watch?v=aw3vvcUfmUs
 - title: An Evening of Irish Music
   role: Producer, cinematographer
-  link:
+  link: https://www.youtube.com/watch?v=MJgc_Hp8L-U
 - title: SITTV News Episode 0
   role: Editor
-  link:
+  link: https://www.youtube.com/watch?v=qmg96R2JZKk
 - title: 2018 Stevens SGA Meetings
   role: Producer, videographer, editor
-  link:
+  link: https://www.youtube.com/watch?v=qmg96R2JZKk
 - title: Box
   role: Graphic designer, editor
-  link:
+  link: https://www.youtube.com/watch?v=l5FLYgB56V4
 - title: SITTV News Season 5
   role: Actor
-  link:
+  link: https://www.youtube.com/watch?v=Xkcw69f6wP8
 - title: Who Am I?
   role: Director, cinematographer
-  link:
+  link: https://www.youtube.com/watch?v=wX_eECRfCTg
 - title: I Walk Across Campus
   role: Producer, cinematographer, editor
-  link:
+  link: https://www.youtube.com/watch?v=2R-XMTWEhkM
 - title: Making Stevens Student-Centric
   role: Co-producer, videographer
-  link:
+  link: https://www.youtube.com/watch?v=627sEX9latA
 - title: The Impeachment Trial of Jon Darlak
   role: Editor
-  link:
+  link: https://www.youtube.com/watch?v=EdJFXQTqqxg
 - title: Hooks & Blow
   role: Producer, director, cinematographer, editor
-  link:
+  link: https://www.youtube.com/watch?v=xjR6zmF5dwg
