fixed spelling of "Qué?"

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -10,7 +10,7 @@
 - title: Roving Reporter 2017-09-19
   role: Cinematographer
   link: https://www.youtube.com/watch?v=tmQjn3h8ICc
-- title: Que?
+- title: Qué?
   role: Editor, videographer
   link: https://www.youtube.com/watch?v=PdkuGvrBCsw
 - title: Roving Reporter 2017-12-04
