--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,5 @@
 - title: Did You Just Assume My Genre?
-  role: Co-producer, Actor, writer, assistant videographer
+  role: Co-producer, actor, writer, assistant videographer
   link: https://www.youtube.com/watch?v=b1QucwbsJCo
 - title: "Paul's Psychedelic Breakfast"
   role: Producer, editor
