--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -52,3 +52,7 @@
 - title: Hooks & Blow
   role: Producer, director, cinematographer, editor
   link: https://www.youtube.com/watch?v=xjR6zmF5dwg
+- title: ASMR with Squeedman
+  role: Assistant editor
+  link: https://www.youtube.com/watch?v=7YxEVsWc670
+  
