added more videos

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -52,6 +52,12 @@
 - title: Hooks & Blow
   role: Producer, director, cinematographer, editor
   link: https://www.youtube.com/watch?v=xjR6zmF5dwg
+- title: Dog Test
+  role: Videographer, editor
+  link: https://www.youtube.com/watch?v=nNM6Yga2P8A
+- title: Unboxing Bread Gloves
+  role: Producer, director, cinematographer, editor
+  link: https://www.youtube.com/watch?v=IuBSlyZDxoc
 - title: ASMR with Squeedman
   role: Assistant editor
   link: https://www.youtube.com/watch?v=7YxEVsWc670
