added new stute link

--- a/_data/stute.yml
+++ b/_data/stute.yml
@@ -18,3 +18,6 @@
   link: https://thestute.com/2018/11/30/senate-budget-committee-holds-semesterly-budget-meeting/
 - title: Stevens Christian Fellowship promoted to Probationary RSO
   link: https://thestute.com/2018/11/30/stevens-christian-fellowship-promoted-to-probationary-rso/
+- title: Childhood's End
+  link: https://thestute.com/2019/02/08/childhoods-end/
+  
