--- a/_data/stute.yml
+++ b/_data/stute.yml
@@ -20,9 +20,9 @@
   link: https://thestute.com/2018/11/30/stevens-christian-fellowship-promoted-to-probationary-rso/
 - title: Childhood's End
   link: https://thestute.com/2019/02/08/childhoods-end/
-- SGA holds special Senate meeting to discuss Intercultural Center proclamation
+- title: SGA holds special Senate meeting to discuss Intercultural Center proclamation
   link: https://thestute.com/2019/02/22/sga-holds-special-senate-meeting-to-discuss-intercultural-center-proclamation/
-- Gianforte Family Academic Center details revealed
+- title: Gianforte Family Academic Center details revealed
   link: https://thestute.com/2019/02/22/gianforte-family-academic-center-details-revealed/
-- Student leaders hold LGBTQ+ summit with Student Affairs
+- title: Student leaders hold LGBTQ+ summit with Student Affairs
   link: https://thestute.com/2019/03/01/student-leaders-hold-lgbtq-summit-with-student-affairs/
