--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -1,2 +1,6 @@
 - title: MyStevens
   link: https://my.stevens.edu/
+- title: Canvas
+  link: https://sit.instructure.com/
+- title: Alpha Phi Omega — Theta Alpha
+  link: https://apota.org/
