more links yeet

--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -4,3 +4,15 @@
   link: https://sit.instructure.com/
 - title: Alpha Phi Omega — Theta Alpha
   link: https://apota.org/
+- title: GroupMe
+  link: https://web.groupme.com/chats
+- title: kek.gg
+  link: https://kek.gg/
+- title: Interval Calculator
+  link: https://rechneronline.de/musik/interval.php
+- title: Writing Songs that Don't Suck
+  link: http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html
+- title: Guitar Chords
+  link: https://www.guitar-chords.org.uk/c-major-chord.html
+- title: Play
+  link: http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp
