--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -2,6 +2,8 @@
   link: https://my.stevens.edu/
 - title: Canvas
   link: https://sit.instructure.com/
+- title: YouTube
+  link: https://youtube.com
 - title: Alpha Phi Omega — Theta Alpha
   link: https://apota.org/
 - title: GroupMe
