added people finder to favorites link

--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -1,5 +1,7 @@
 - title: MyStevens
   link: https://my.stevens.edu/
+- title: People finder
+  link: https://web.stevens.edu/peoplefinder/
 - title: Canvas
   link: https://sit.instructure.com/
 - title: YouTube
