--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -4,6 +4,8 @@
   link: https://web.stevens.edu/peoplefinder/
 - title: Canvas
   link: https://sit.instructure.com/
+- title: Virtual EMS
+  link: https://emsweb.stevens.edu/VirtualEMS/
 - title: YouTube
   link: https://youtube.com
 - title: Alpha Phi Omega — Theta Alpha
