--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -8,6 +8,8 @@
   link: https://ducklink.stevens.edu/
 - title: Virtual EMS
   link: https://emsweb.stevens.edu/VirtualEMS/
+- title: Stevens Catering
+  link: http://stevens.e-cater.com/default.php
 - title: YouTube
   link: https://youtube.com
 - title: Alpha Phi Omega — Theta Alpha
