--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -14,6 +14,8 @@
   link: https://youtube.com
 - title: Alpha Phi Omega — Theta Alpha
   link: https://apota.org/
+- title: TeamDynamix
+  link: https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx
 - title: GroupMe
   link: https://web.groupme.com/chats
 - title: kek.gg
