added todoist link

--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -1,5 +1,7 @@
 - title: MyStevens
   link: https://my.stevens.edu/
+- title: Todoist
+  link: https://todoist.com/app
 - title: People finder
   link: https://web.stevens.edu/peoplefinder/
 - title: Canvas
