added Workday link to favorites

--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -6,6 +6,8 @@
   link: https://web.stevens.edu/peoplefinder/
 - title: Canvas
   link: https://sit.instructure.com/
+- title: Workday
+  link: https://wd5.myworkday.com/stevens
 - title: DuckLink
   link: https://ducklink.stevens.edu/
 - title: Virtual EMS
