added google messages link

--- a/_data/favorites.yml
+++ b/_data/favorites.yml
@@ -12,6 +12,8 @@
   link: https://ducklink.stevens.edu/
 - title: Virtual EMS
   link: https://emsweb.stevens.edu/VirtualEMS/
+- title: Google Messages
+  link: https://messages.google.com/web/
 - title: Stevens Catering
   link: http://stevens.e-cater.com/default.php
 - title: YouTube
