maybe fixed noncompile??

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
     paths:
     - node_modules/
   script:
-  - npm install metalsmith
+  - npm install
   - make build
   artifacts:
     paths:
