--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "The personal website of Eric S. Londres.",
   "main": "index.html",
   "dependencies": {
-    "metalsmith-markdown": "^1.2.0",
     "metalsmith": "^2.3.0",
-    "metalsmith-layouts": "^2.3.1"
+    "metalsmith-in-place": "^4.4.0",
+    "metalsmith-layouts": "^2.3.1",
+    "metalsmith-markdown": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
