--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The personal website of Eric S. Londres.",
   "main": "index.html",
   "dependencies": {
+    "jstransformer-markdown": "^1.2.1",
     "metalsmith": "^2.3.0",
     "metalsmith-in-place": "^4.4.0",
     "metalsmith-layouts": "^2.3.1",
