--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "dependencies": {
     "jstransformer-markdown": "^1.2.1",
+    "jstransformer-nunjucks": "^1.0.0",
     "metalsmith": "^2.3.0",
     "metalsmith-in-place": "^4.4.0"
   },
