--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://gitlab.com/slondr/slondr.gitlab.io/issues"
   },
-  "homepage": "https://gitlab.com/slondr/slondr.gitlab.io#readme.org"
+  "homepage": "https://gitlab.com/slondr/slondr.gitlab.io#readme"
 }
