--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "slondr.ml",
-  "version": "2.0.3",
-  "description": "The personal website of Eric S. Londres.",
-  "main": "index.html",
-  "dependencies": {
-    "jstransformer-markdown": "^1.2.1",
-    "jstransformer-sass": "^1.0.0",
-    "metalsmith": "^2.3.0",
-    "metalsmith-in-place": "^4.4.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@gitlab.com/slondr/slondr.gitlab.io.git"
-  },
-  "author": "Eric S. Londres",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://gitlab.com/slondr/slondr.gitlab.io/issues"
-  },
-  "homepage": "https://gitlab.com/slondr/slondr.gitlab.io"
+    "name": "slondr.ml",
+    "version": "2.1.0",
+    "private": true,
+    "description": "The personal website of Eric S. Londres.",
+    "main": "index.html",
+    "dependencies": {
+	"jstransformer-markdown": "^1.2.1",
+	"jstransformer-sass": "^1.0.0",
+	"metalsmith": "^2.3.0",
+	"metalsmith-in-place": "^4.4.0",
+	"webpack": "^4.37.0",
+	"webpack-cli": "^3.3.6"
+    },
+    "devDependencies": {},
+    "scripts": {
+	"test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+	"type": "git",
+	"url": "git+ssh://git@gitlab.com/slondr/slondr.gitlab.io.git"
+    },
+    "author": "Eric S. Londres",
+    "license": "GPL-3.0-or-later",
+    "bugs": {
+	"url": "https://gitlab.com/slondr/slondr.gitlab.io/issues"
+    },
+    "homepage": "https://gitlab.com/slondr/slondr.gitlab.io"
 }
