--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ image: node:latest
 include:
   - template: Code-Quality.gitlab-ci.yml
 
+include:
+  template: Dependency-Scanning.gitlab-ci.yml
+    
 variables:
   LC_ALL: C.UTF-8
 
