--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,7 @@ image: node:latest
 
 include:
   - template: Code-Quality.gitlab-ci.yml
-
-include:
-  template: Dependency-Scanning.gitlab-ci.yml
+  - template: Dependency-Scanning.gitlab-ci.yml
     
 variables:
   LC_ALL: C.UTF-8
