--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
    "dependencies": {
       "jstransformer-markdown": "^1.2.1",
       "jstransformer-sass": "^1.0.0",
+      "jstransformer-typescript": "^1.1.0",
       "metalsmith": "^2.3.0",
       "metalsmith-in-place": "^4.4.0"
    },
