--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
       "metalsmith": "^2.3.0",
       "metalsmith-in-place": "^4.4.0"
    },
-   "devDependencies": {
-      "webpack": "^4.37.0",
-      "webpack-cli": "^3.3.6"
-   },
+   "devDependencies": {},
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
    },
