--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	"@babel/cli": "^7.5.5",
 	"@babel/core": "^7.5.5",
 	"@babel/plugin-transform-reserved-words": "^7.2.0",
+	"@babel/plugin-transform-runtime": "^7.5.5",
 	"@babel/polyfill": "^7.4.4",
 	"@babel/preset-env": "^7.5.5",
 	"@babel/preset-typescript": "^7.3.3",
 	"babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
 	"babel-plugin-transform-es3-property-literals": "^6.22.0",
+	"babel-plugin-transform-runtime": "^6.23.0",
 	"core-js": "^3.1.4"
     },
     "babel": {
@@ -39,6 +41,13 @@
 	    ]
 	],
 	"plugins": [
+	    [
+		"transform-runtime",
+		{
+		    "polyfill": false,
+		    "regenerator": true
+		}
+	    ],
 	    "transform-es3-member-expression-literals",
 	    "transform-es3-property-literals",
 	    "@babel/plugin-transform-reserved-words"
