--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
 	"@babel/cli": "^7.5.5",
 	"@babel/core": "^7.5.5",
 	"@babel/plugin-transform-reserved-words": "^7.2.0",
-	"@babel/plugin-transform-runtime": "^7.5.5",
-	"@babel/polyfill": "^7.4.4",
 	"@babel/preset-env": "^7.5.5",
 	"@babel/preset-typescript": "^7.3.3",
 	"babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
@@ -29,9 +27,9 @@
 		{
 		    "targets": {
 			"browsers": [
-			    "ie >= 6"
+			    "> 5%"
 			],
-			"module": false
+			"esmodules": false
 		    }
 		}
 	    ],
@@ -41,10 +39,6 @@
 	    ]
 	],
 	"plugins": [
-	    [
-		"@babel/plugin-transform-runtime",
-		{}
-	    ],
 	    "transform-es3-member-expression-literals",
 	    "transform-es3-property-literals",
 	    "@babel/plugin-transform-reserved-words"
