--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,10 @@
-image: node:latest
+image: alpine:latest
 
 include:
   - template: Code-Quality.gitlab-ci.yml
   - template: Dependency-Scanning.gitlab-ci.yml
     
-variables:
-  LC_ALL: C.UTF-8
-
 pages:
-  script:
-  - make build
   artifacts:
     paths:
     - public
