--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ include:
   - template: Dependency-Scanning.gitlab-ci.yml
     
 pages:
+  stage: deploy
+  script:
+  - echo 'Deploying...'
   artifacts:
     paths:
     - public
