--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: alpine:latest
 
 include:
   - template: Code-Quality.gitlab-ci.yml
-  - template: Dependency-Scanning.gitlab-ci.yml
+#  - template: Dependency-Scanning.gitlab-ci.yml
     
 pages:
   stage: deploy
