replace npm ci with npm i

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ build:
   stage: build
   script:
     - apk add grpc
-    - npm ci sass
+    - npm i sass
     - npx sass src/index.sass public/index.css
     - npx sass src/about.sass public/about.css
   artifacts:
